SERVER-56127 Fixing retryable writes on update and delete commands to not execute more than once

(cherry picked from commit 6d8290297b563121037f8e9a9f2d37ec45ddb4bf)